# monad-bayes

./: .envrc  .gitignore  .hlint.yaml  .travis.yml  404.html  Alt.ipynb  ArtifactOverview.md  Base.hs  CHANGELOG.md  CODE_OF_CONDUCT.md  Dist.hs  Dockerfile  Examples.hs  Explicit.hs  LICENSE  MAINTAINERS.md  MCMC.hs  MCMC2.hs  NaiveSampling.R  NaiveSampling.lhs  ParticleGibbs.hs  PerfTest.hs  PerfTestNew.hs  README.md  SMC.hs  Setup.hs  default.nix  flake.nix  forManuel.hs  forManuel.nix  ihaskell.nix  mkdocs.yml  monad-bayes.cabal  monad-bayes.nix  myNewShell.nix  myShell.nix  plots.py  process-profiles.sh  profile.sh  references.bib  (+20 more)
.buildkite/: pipeline.yml
.circleci/: config.yaml  config.yml
.github/: dependabot.yml
.github/.github/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/nix-common-setup/: action.yml
.github/workflows/: ci.yml  nix.yml  update-flake-lock.yml
.netlify/: state.json
benchmark/: SSM.hs  Single.hs  Speed.hs
docs/: Histogram.html  Introduction.html  examples.md  index.html  index.md  mkdocs.yml  monad-bayes-site.cabal  probprog.md  requirements.txt  stack.yaml  tutorials.md
docs/docs/: examples.md  index.md  probprog.md  tutorials.md  usage.md
docs/docs/notebooks/: ClassicalPhysics.html  Histogram.html  Ising.html  Lenses.html  MCMC.html  Parsing.html  Streaming.html
docs/examples/: index.html
docs/notebooks/: AdvancedSampling.html  Ising.html  Parsing.html  Sampling.html  Streaming.html
docs/probprog/: index.html
docs/source/: conf.py  index.rst  probprog.md  reactive.md  usage.md
docs/tutorials/: index.html
docs/usage/: index.html
kernels/: haskell.nix
models/: BenchAll.hs  Benchmarks.hs  BetaBin.hs  Branching.hs  Coin.hs  ConjugatePriors.hs  DPmixture.hs  Dice.hs  Failure.hs  Gamma.hs  HMM.hs  Helper.hs  LDA.hs  LGSS.hs  LinearOutliers.hs  LogReg.hs  NestedInference.hs  Nonlinear.hs  NonlinearSSM.hs  Plotting.hs  SSM.hs  Sprinkler.hs  StrictlySmallerSupport.hs
models/NonlinearSSM/: Algorithms.hs
monad-bayes-site/: AdvancedSampling.html  Bayesian.html  ClassicalPhysics.html  Introduction.html  Ising.html  Lazy.html  Lenses.html  MCMC.html  Parsing.html  RealTimeInference.html  SMC.html  Sampling.html  Streaming.html  about.md  examples.md  monad-bayes-site.cabal  site.hs  stack.yaml  tutorials.md
monad-bayes-site/_cache/: -14469358728363703  -1749146891218283582  -2095085398174420213  -209573229233254355  -2375272998066041756  -2509452937577917964  -3130898350326454040  -4182589239025786963  -418326561550140877  -4590939878979731814  -467837984207213569  -5172228707638515792  -5655109312313017360  -5735734222214861660  -5968528018020852491  -5976210123516461587  -6208876127119767112  -7115516761682178897  -7181861931978901542  -774009746834943747  -8642047125701783729  -8859189451178402585  -9013735153427741298  -9216779538427550700  1368425861625336465  1513675151711266792  1574220054724235017  1664579619758049689  1699790891411764839  2373810728545156078  2449001432756035941  3063785951502887887  38757129951879236  389538380096867163  4301022619885502842  4504179684952585820  5077047831813567475  5101438558057063658  5454147303193545275  5479724175313719771  (+12 more)
monad-bayes-site/_site/: about.html  archive.html  contact.html  examples.html  index.html  tutorials.html
monad-bayes-site/_site/css/: default.css  syntax.css
monad-bayes-site/_site/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
monad-bayes-site/css/: default.css
monad-bayes-site/templates/: default.html
nix/: fix.nix  haskell-nix.json  haskell.nix  inputs.nix  lint.nix  mwc-random.nix  nixpkgs-stack.nix  nixpkgs.json  nixpkgs.nix  projects.nix  update.nix
nix/nixpkgs/: default.nix
notebooks/: AdvancedSampling.ipynb  ClassicalPhysics.ipynb  Functional_PPLs.ipynb  Histogram.ipynb  Implementation.ipynb  Introduction.ipynb  Lazy.ipynb  MCMC.ipynb  Named_MCMC.ipynb  Parsing.ipynb  Plotting.hs  SIR.ipynb  SMC.ipynb  Sampling.ipynb  TestSaveViaEmacs.ipynb  default.nix  plotting.hs
notebooks/.ipynb_checkpoints/: AdvancedSampling-checkpoint.ipynb  ClassicalPhysics-checkpoint.ipynb  Functional_PPLs-checkpoint.ipynb  Implementation-checkpoint.ipynb  Introduction-checkpoint.ipynb  Lazy-checkpoint.ipynb  MCMC-checkpoint.ipynb  Parsing-checkpoint.ipynb  SMC-checkpoint.ipynb  Sampling-checkpoint.ipynb  file-checkpoint.json  plotting-checkpoint.hs
notebooks/examples/: ClassicalPhysics.ipynb  Histogram.html  Histogram.ipynb  Ising.ipynb  Lenses.html  Lenses.ipynb  Parsing.html  Parsing.ipynb  Streaming.ipynb
notebooks/models/: LDA.ipynb
notebooks/tutorials/: AdvancedSampling (1).html  AdvancedSampling.ipynb  Bayesian.ipynb  Introduction.html  Introduction.ipynb  Lazy.ipynb  MCMC.ipynb  SMC.ipynb  Sampling.html  Sampling.ipynb
search/: search_index.json
src/: Base.hs  Dist.hs  Empirical.hs  Exact.hs  Examples.hs  Explicit.hs  Importance.hs  Inference.hs  MCMC.hs  Metrics.hs  Particle.hs  ParticleGibbs.hs  Primitive.hs  Prior.hs  Rejection.hs  SMC.hs  Sampler.hs  Trace.hs  Weighted.hs
src/Numeric/: CustomReal.hs  LogDomain.hs
src/Trace/: ByDist.hs  ByDistribution.hs  ByTime.hs  ByType.hs  Debug.hs  Indexed.hs  List.hs  WithMultimap.hs
test/: KL.hs  KS.hs  NaiveSampling.lhs  Spec.hs  TestAdvanced.hs  TestBenchmarks.hs  TestConditional.hs  TestDist.hs  TestDistribution.hs  TestEmpirical.hs  TestEnumerator.hs  TestGradient.hs  TestHerding.hs  TestInference.hs  TestIntegrator.hs  TestKernel.hs  TestNamed.hs  TestOptimization.hs  TestParticle.hs  TestPipes.hs  TestPopulation.hs  TestPopulationT.hs  TestProposal.hs  TestSMCObservations.hs  TestSSMFixtures.hs  TestSampler.hs  TestSequential.hs  TestSequentialT.hs  TestStormerVerlet.hs  TestTrace.hs  TestTraced.hs  TestWeighted.hs  essence.hs  essenceGeneric.hs  gist.hs
test/fixtures/: HMM10-MH.txt  HMM10-RMSMC.txt  HMM10-SMC.txt  LDA10-MH.txt  LDA10-RMSMC.txt  LDA10-SMC.txt  LR10-MH.txt  LR10-RMSMC.txt  LR10-SMC.txt  SSM-PMMH.txt  SSM-RMSMC.txt  SSM-RMSMCDynamic.txt  SSM-SMC.txt  SSM-SMC2.txt
(+109 files in other folders)
