name:          monad-bayes-site
version:       0.1.0.0
build-type:    Simple
cabal-version: >=1.10

executable site
  main-is:          site.hs
  build-depends:
      base    >=4    && <5
    , hakyll  >=4.15 && <4.16
    , pandoc  >=2.14

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
